# brand-decision-system

./: .env.example  .gitignore  AUDIT_REPORT.md  AUDIT_REPORT_V2.md  AUDIT_REPORT_V3.md  Brand_Decision_System_MVP_Plan_v1.0.docx  Brand_Decision_System_TDD_v0.4 (1).docx  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
content/: pain_rules.yaml  pain_taxonomy.yaml  register_rules.yaml
content/prompts/: pain_narrative.j2  unified_preamble.j2
content/prompts/modules/: naming.j2  slogan.j2  strategy_theme.j2  tagline.j2  (+1 more)
docs/: M1_TODO.md  METHODOLOGY.md  MVP_PLAN.md  TDD.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_add_question_constraints.py
src/: config.py  main.py
src/discovery/: __init__.py  condition_evaluator.py  content_bundle.py  exceptions.py  loader.py  narrative_generator.py  register_resolver.py  rules_engine.py
src/domain/: __init__.py  audit.py  brand_dna_context.py  exceptions.py  export.py  facilitator.py  language.py  module.py  module_outputs.py  narrative_output.py  pain.py  prompt.py  questionnaire.py  rationale.py  register.py  session.py
src/generation/: __init__.py  exceptions.py  module_runner.py  narrative_generator.py  orchestrator.py  prompt_builder.py  registry.py  upstream.py
src/llm/: __init__.py  exceptions.py  mock.py  models.py  provider.py
src/orchestration/: __init__.py  engine.py  intersections.py  suppression.py
src/persistence/: __init__.py  base.py  converters.py  models.py  session.py
tests/integration/: conftest.py  test_discovery_end_to_end.py  test_full_session_flow.py  test_llm_call_record_repository.py  test_migration.py  test_session_repository.py
tests/orchestration/: test_combination_coverage.py  test_engine.py  test_intersections.py  test_suppression.py
tests/unit/: test_health.py
(+35 files in other folders)
