[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brand-decision-system"
version = "0.1.0"
description = "Real-Time Brand Decision System — facilitator-operated bilingual ideation tool."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Brand Decision System Team" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "structlog>=24.4",
]

[project.optional-dependencies]
auth = [
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "ruff>=0.8",
    "black>=25.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# All async fixtures and async tests share one event loop. Required for
# session-scoped engines whose connections would otherwise be created on
# one loop and used from another (Windows ProactorEventLoop teardown
# race on Python 3.14 + asyncpg).
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = ["integration: marks tests requiring a running Postgres"]
addopts = "-ra --cov=src --cov-report=term-missing -m 'not integration'"
